Tag , Category , Size and Product CRUDs are done. Customer controller will be implemented.